[refactor]channel治理层：枚举替代硬编码字符串、异常统一、move重复检查
- 新增ContentGovernanceAction枚举，PublishStatusEnum补充SCHEDULED/FAILED
- ChannelGovernanceBizImpl/ChannelPublishBizImpl/ScheduledPublishDispatchBizImpl
  使用枚举code替代硬编码字符串
- IllegalArgumentException统一替换为JeecgBootException
- handleMove增加目标频道重复内容检查
- ChannelPublishBizImpl.addExistingContent补充@Transactional
- 同步更新ChannelGovernanceBizTest适配实现变更

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>